--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 GOOGLE_ID =554976172882-c5v5lvnlbpsn10762qa33a8pve5vo4hc.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+MONGODB_URI= mongodb+srv://pritomsaha24ps:pritomsaha@cluster0.7xf3dzh.mongodb.net/?retryWrites=true&w=majority
+
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL= http://localhost:3000
+NEXTAUTH_SECRET =JEaLTmxJyfISDekYH/tggUJM0+pWmk7D6rdLK2yjiXc=
